Friend List Complete

--- a/animatable/Base.lproj/Main.storyboard
+++ b/animatable/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -231,6 +232,9 @@
                                                 <real key="value" value="0.80000000000000004"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="addPicBtnPressed:" destination="7bY-Xj-hdq" eventType="touchUpInside" id="fPp-PW-mEA"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.70980392160000005" green="0.4549019608" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
@@ -471,6 +475,7 @@
                     <connections>
                         <outlet property="dobField" destination="gNL-3F-9hI" id="N3t-IH-Lhk"/>
                         <outlet property="emailField" destination="gek-KO-hwd" id="RyE-dk-X5T"/>
+                        <outlet property="imgView" destination="4R5-Zm-UU5" id="l8S-9T-e2i"/>
                         <outlet property="mobileField" destination="0G3-CO-eCH" id="BPV-Dr-KiR"/>
                         <outlet property="nameField" destination="cIb-uT-rKs" id="WCs-X4-vap"/>
                         <outlet property="passField" destination="L9e-Le-kVJ" id="d5c-Ei-vFg"/>
@@ -612,34 +617,97 @@
                                     <constraint firstItem="Rcn-im-xhO" firstAttribute="leading" secondItem="759-UJ-7Ne" secondAttribute="leading" constant="8" id="iSq-SF-O5L"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Cec-vU-DH2">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="178" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Cec-vU-DH2">
                                 <rect key="frame" x="0.0" y="63" width="375" height="604"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="separatorColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="W4Q-vf-brn" detailTextLabel="d3x-5C-nDP" style="IBUITableViewCellStyleSubtitle" id="0E5-4H-S6p">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="178" id="Dii-09-P6d" customClass="contactListTVC" customModule="animatable" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="178"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0E5-4H-S6p" id="690-DG-yZG">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Dii-09-P6d" id="4V0-os-AYp">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="177"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="W4Q-vf-brn">
-                                                    <rect key="frame" x="15" y="5" width="32" height="20"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y4b-3g-0DE">
+                                                    <rect key="frame" x="147" y="9" width="228" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.98823529409999999" green="0.36078431370000003" blue="0.31372549020000001" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="d3x-5C-nDP">
-                                                    <rect key="frame" x="15" y="25" width="41" height="14"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dob" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jGh-qV-lMF">
+                                                    <rect key="frame" x="147" y="47" width="228" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.98823529409999999" green="0.36078431370000003" blue="0.31372549020000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Age: " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tTy-fW-sKW">
+                                                    <rect key="frame" x="147" y="85" width="228" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.98823529409999999" green="0.36078431370000003" blue="0.31372549020000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E7b-u6-qbB">
+                                                    <rect key="frame" x="0.0" y="0.0" width="139" height="169"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ba7-co-2bX">
+                                                            <rect key="frame" x="8" y="25" width="125" height="125"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="125" id="Bbk-1W-wPE"/>
+                                                                <constraint firstAttribute="height" constant="169" id="CXS-x8-2MF"/>
+                                                                <constraint firstAttribute="width" constant="125" id="cKR-EO-O1Z"/>
+                                                                <constraint firstAttribute="width" constant="139" id="jSt-Fe-CrY"/>
+                                                                <constraint firstAttribute="width" secondItem="ba7-co-2bX" secondAttribute="height" multiplier="139:124" id="vpb-05-nTg"/>
+                                                            </constraints>
+                                                            <variation key="default">
+                                                                <mask key="constraints">
+                                                                    <exclude reference="CXS-x8-2MF"/>
+                                                                    <exclude reference="jSt-Fe-CrY"/>
+                                                                    <exclude reference="vpb-05-nTg"/>
+                                                                </mask>
+                                                            </variation>
+                                                        </imageView>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="139" id="0II-yC-Y0i"/>
+                                                        <constraint firstAttribute="height" constant="169" id="0Zc-bE-dD0"/>
+                                                        <constraint firstItem="ba7-co-2bX" firstAttribute="top" secondItem="E7b-u6-qbB" secondAttribute="top" constant="25" id="h1g-cF-J7J"/>
+                                                        <constraint firstItem="ba7-co-2bX" firstAttribute="centerX" secondItem="E7b-u6-qbB" secondAttribute="centerX" id="vHw-6l-JTb"/>
+                                                    </constraints>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3xi-CV-OJL">
+                                                    <rect key="frame" x="147" y="123" width="228" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.98823529409999999" green="0.36078431370000003" blue="0.31372549020000001" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="jGh-qV-lMF" secondAttribute="trailing" id="5cA-O6-r2R"/>
+                                                <constraint firstItem="tTy-fW-sKW" firstAttribute="top" secondItem="jGh-qV-lMF" secondAttribute="bottom" constant="17" id="D3H-Id-NDO"/>
+                                                <constraint firstItem="y4b-3g-0DE" firstAttribute="top" secondItem="4V0-os-AYp" secondAttribute="top" constant="9" id="HQM-V4-nvW"/>
+                                                <constraint firstAttribute="trailing" secondItem="y4b-3g-0DE" secondAttribute="trailing" id="JXO-Y8-g5f"/>
+                                                <constraint firstAttribute="trailing" secondItem="3xi-CV-OJL" secondAttribute="trailing" id="Od4-EK-o7n"/>
+                                                <constraint firstItem="3xi-CV-OJL" firstAttribute="top" secondItem="tTy-fW-sKW" secondAttribute="bottom" constant="17" id="aQX-as-3YD"/>
+                                                <constraint firstItem="jGh-qV-lMF" firstAttribute="leading" secondItem="E7b-u6-qbB" secondAttribute="trailing" constant="8" id="bNe-FS-cdJ"/>
+                                                <constraint firstAttribute="trailing" secondItem="tTy-fW-sKW" secondAttribute="trailing" id="dkI-CC-XpF"/>
+                                                <constraint firstItem="tTy-fW-sKW" firstAttribute="leading" secondItem="E7b-u6-qbB" secondAttribute="trailing" constant="8" id="fjh-OY-DKG"/>
+                                                <constraint firstAttribute="bottom" secondItem="E7b-u6-qbB" secondAttribute="bottom" constant="8" id="iBJ-oU-eeS"/>
+                                                <constraint firstItem="y4b-3g-0DE" firstAttribute="leading" secondItem="E7b-u6-qbB" secondAttribute="trailing" constant="8" id="mtw-3n-xxz"/>
+                                                <constraint firstItem="jGh-qV-lMF" firstAttribute="top" secondItem="y4b-3g-0DE" secondAttribute="bottom" constant="17" id="rMK-bG-ejm"/>
+                                                <constraint firstItem="E7b-u6-qbB" firstAttribute="leading" secondItem="4V0-os-AYp" secondAttribute="leading" id="sDS-XP-zbK"/>
+                                                <constraint firstItem="E7b-u6-qbB" firstAttribute="top" secondItem="4V0-os-AYp" secondAttribute="top" id="t9W-ob-2L6"/>
+                                                <constraint firstItem="3xi-CV-OJL" firstAttribute="leading" secondItem="E7b-u6-qbB" secondAttribute="trailing" constant="8" id="wv9-ZB-eYA"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="ageLbl" destination="tTy-fW-sKW" id="QDC-ln-svb"/>
+                                            <outlet property="dobLbl" destination="jGh-qV-lMF" id="1CT-aT-Zyd"/>
+                                            <outlet property="emailLbl" destination="3xi-CV-OJL" id="Yqp-Hn-2Nz"/>
+                                            <outlet property="imgView" destination="ba7-co-2bX" id="c6U-ps-PaF"/>
+                                            <outlet property="nameLbl" destination="y4b-3g-0DE" id="Vlg-dP-fyR"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
